{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 46,
  "lineage": "fe10842d-6a93-4d35-9f20-8957cad0f03d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "final_evaluation_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a72d328538fc075",
            "arn": "arn:aws:ec2:us-east-1:933555955390:instance/i-06d84c0620428bee4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d84c0620428bee4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "final_evaluation",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0756cb89f69eade0e",
            "private_dns": "ip-10-0-5-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.142",
            "public_dns": "ec2-44-202-29-183.compute-1.amazonaws.com",
            "public_ip": "44.202.29.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0234780536c5bde90",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0755ef01738990d90",
            "tags": {
              "Name": "Final Evaluation"
            },
            "tags_all": {
              "Name": "Final Evaluation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a25183ce1ff3f531"
            ]
          },
          "dependencies": [
            "aws_key_pair.final_evaluation",
            "aws_security_group.final_evaluation_ec2",
            "aws_subnet.final_evaluation_public",
            "aws_vpc.final_evaluation",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "final_evaluation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933555955390:internet-gateway/igw-0706754b5c225d24c",
            "id": "igw-0706754b5c225d24c",
            "owner_id": "933555955390",
            "tags": {
              "Name": "Final Evaluation"
            },
            "tags_all": {
              "Name": "Final Evaluation"
            },
            "vpc_id": "vpc-0934dbfc06021c036"
          },
          "dependencies": [
            "aws_vpc.final_evaluation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "final_evaluation_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933555955390:route-table/rtb-020d2c67a5ceb0a85",
            "id": "rtb-020d2c67a5ceb0a85",
            "owner_id": "933555955390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0706754b5c225d24c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Final Evaluation"
            },
            "tags_all": {
              "Name": "Final Evaluation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0934dbfc06021c036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.final_evaluation",
            "aws_vpc.final_evaluation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final_evaluation_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f899551fedb34b65",
            "route_table_id": "rtb-020d2c67a5ceb0a85",
            "subnet_id": "subnet-0755ef01738990d90"
          },
          "dependencies": [
            "aws_internet_gateway.final_evaluation",
            "aws_route_table.final_evaluation_public",
            "aws_subnet.final_evaluation_public",
            "aws_vpc.final_evaluation",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final_evaluation_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933555955390:security-group/sg-0a25183ce1ff3f531",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Any outbound allowed",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a25183ce1ff3f531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http with ssl",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from ssh client",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final_evaluation_ec2",
            "name_prefix": "",
            "owner_id": "933555955390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Final Evaluation"
            },
            "tags_all": {
              "Name": "Final Evaluation"
            },
            "timeouts": null,
            "vpc_id": "vpc-0934dbfc06021c036"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final_evaluation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final_evaluation_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933555955390:subnet/subnet-0755ef01738990d90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0755ef01738990d90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "933555955390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Final Evaluation Public Subnet 0"
            },
            "tags_all": {
              "Name": "Final Evaluation Public Subnet 0"
            },
            "vpc_id": "vpc-0934dbfc06021c036"
          },
          "dependencies": [
            "aws_vpc.final_evaluation",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "final_evaluation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:933555955390:vpc/vpc-0934dbfc06021c036",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056ed619edc0357f8",
            "default_route_table_id": "rtb-0c9afeb211bbfddc2",
            "default_security_group_id": "sg-0d3f13abad34343a9",
            "dhcp_options_id": "dopt-00292bc0ce4d33e70",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0934dbfc06021c036",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9afeb211bbfddc2",
            "owner_id": "933555955390",
            "tags": {
              "Name": "Final Evaluation"
            },
            "tags_all": {
              "Name": "Final Evaluation"
            }
          }
        }
      ]
    }
  ]
}